--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
   "scripts": {
     "test": "node nodehid.js",
     "prepublish": "git submodule update --init",
-    "install": "node-pre-gyp install --fallback-to-build"
+    "install": "node-pre-gyp install --build-from-source"
   },
   "binary": {
     "module_name": "HID",
