--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "scripts": {
     "test": "node nodehid.js",
     "prepublish": "git submodule update --init",
+    "preinstall": "git submodule update -i -r",
     "install": "node-pre-gyp install --build-from-source"
   },
   "binary": {
